bynkc/tests/fixtures/positive/51_doc_block_on_fn/input.bynk
commons docs.demo {
  ---
  Add two integers together.
  ---
  fn add(a: Int, b: Int) -> Int {
    a + b
  }
}
