bynkc/tests/fixtures/negative/233_send_in_pure_context/src/calc.bynk
commons calc

fn label(n: Int) -> String {
  -- a pure free function is not an effectful body, so `~>` is illegal here
  ~> Effect.pure(())
  "n=\(n)"
}
